# reticuloc

./: .gitignore  .pre-commit-config.yaml  fastapi.sh  pyproject.toml  requirements.txt  testing.ipynb  yolo_train.sh  yolo_train_aug.sh  yolov9_train.sh  yolov9_train_aug.sh
runs/aug2/: args.yaml  results.csv
runs/aug_v9/: args.yaml  results.csv
runs/no_aug/: args.yaml  results.csv
runs/no_aug2/: args.yaml  results.csv
src/: app.py  app_annotation.py  main.py  results.py  reticulai.py  utils.py
src/app/: app.py  app_annotation.py  main.py  request.py
src/app/db/: database.py  models.py  repositories.py
src/app/db/models/: detection.py  image.py  user.py
src/app/schemas/: detection.py  detection_count.py  detection_crops.py  image.py  user.py
src/dataset/: convert_data_to_yolo.py  labels.py  main.py  show_annotation.py  split_yolo_train_val.py
src/model/: json_encoder.py  main.py  postprocessing.py  reticulai.py  utils.py
