[tool.poetry]
name = "reticuloc"
version = "0.1.0"
description = "reticulocytes and erythrocytes detection using ultralytics YOLO models + FastAPI"
authors = ["Yann Nóbrega"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.111.0"
opencv-python = "^4.9.0.80"
ultralytics = "^8.2.18"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
glob2 = "^0.7"
pre-commit = "^3.7.1"
pydantic = "^2.7.1"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
