[tool.poetry]
name = "reticuloc"
version = "0.1.0"
description = "reticulocytes and erythrocytes detection using ultralytics YOLO models + FastAPI"
authors = ["Yann Nóbrega"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = { version = "^2.3.0+cu118", source = "pytorch" }
torchvision = { version = "^0.18.0+cu118", source = "pytorch" }
tensorflow = { extras = ["and-cuda"], version = "^2.16.1" }
opencv-python-headless = "^4.9.0.80"
ultralytics = "^8.0.230"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
supabase = "^2.4.6"

[tool.poetry.group.dev.dependencies]
opencv-python = "^4.9.0.80"
black = "^24.4.2"
glob2 = "^0.7"
pre-commit = "^3.7.1"
scikit-learn = "^1.4.2"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[tool.black]
line-length = 144
exclude = '''
    /(\.direnv|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.venv3|_build|buck-out|build|dist)/
'''


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = 'supplemental'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
